Add benchmarks for node and single-ended version of eertree
Put each benchmark file in separate folder due to criterion using
only Main module.

Also, there are two versions of benchmarks for node - with and without
environment, since computing normal form (NF) of eertree node takes
decent amount of time

--- a/package.yaml
+++ b/package.yaml
@@ -76,9 +76,33 @@ tests:
     - template-haskell
 
 benchmarks:
-  bench:
-    main:                Main.hs
-    source-dirs:         bench
+  simple:
+    main:        Main.hs
+    source-dirs: bench/simple
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - eertree
+
+  list:
+    main:        Main.hs
+    source-dirs: bench/list
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - eertree
+
+  node:
+    main:        Main.hs
+    source-dirs: bench/node
     ghc-options:
     - -threaded
     - -O2
