Add benchmarks for C++ eertree implementation
Implementation was taken and adopted from https://iq.opengenus.org/palindromic-tree-eertree/.
There is an issue related to memory usage during benchmarking -
it takes gigabytes even for very small strings, causing segfault

--- a/package.yaml
+++ b/package.yaml
@@ -111,3 +111,20 @@ benchmarks:
     dependencies:
     - criterion
     - eertree
+
+  cpp:
+    main:        Main.hs
+    source-dirs: bench/cpp
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - bytestring
+    - criterion
+    - eertree
+    # - inline-c
+    - inline-c-cpp
+    - template-haskell
+    - utf8-string
