--- a/stack.yaml
+++ b/stack.yaml
@@ -1,3 +1,11 @@
+allow-newer: true
 resolver: lts-17.0
 packages:
 - .
+extra-deps:
+- Chart-cairo-1.9.3
+- cairo-0.13.8.1
+- haskell-src-1.0.3.1
+- gtk2hs-buildtools-0.13.8.0
+- git: https://github.com/mathandley/AutoBench
+  commit: 6f8629e904365ed736768e65ac15a215b95c55dc
