--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,40 +3,36 @@ name: CI
 # Trigger the workflow on push or pull request, but only for the main branch
 on:
   pull_request:
+    branches: [master]
   push:
     branches: [master]
 
 jobs:
-  stack:
-    name: stack / ghc ${{ matrix.ghc }}
+  stack-test:
+    name: Building and testing with Stack
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        stack: ["2.5.1"]
-        ghc:
-          - "8.4.4"
-          - "8.6.5"
-          - "8.8.4"
-          - "8.10.3"
 
     steps:
-    - uses: actions/checkout@v2.3.3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
 
-    - uses: actions/setup-haskell@v1.1.3
-      name: Setup Haskell Stack
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        stack-version: ${{ matrix.stack }}
+      - name: 🧰 Setup Stack
+        uses: haskell/actions/setup@v1
+        with:
+          enable-stack: true
 
-    - uses: actions/cache@v2.1.2
-      name: Cache ~/.stack
-      with:
-        path: ~/.stack
-        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+      - name: 💾 Cache .stack/
+        uses: actions/cache@v2
+        with:
+          path: |
+            .stack
+          key: ${{ runner.os }}-${{ hashFiles('stack.yaml.lock', 'eertree.cabal') }}-stack
 
-    - name: Build
-      run: |
-        stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --ghc-options=-Werror
-    - name: Test
-      run: |
-        stack test --system-ghc
+      - name: 🔨 Build EERTREE (with Stack)
+        run: |
+          stack build
+
+      - name: 🔨 Run tests (with Stack)
+        run: |
+          stack test
