--- a/bench/cpp/CMakeLists.txt
+++ b/bench/cpp/CMakeLists.txt
@@ -3,7 +3,8 @@
 # Add your source files
 add_executable(bench1 ./simple/bench1.cpp)
 add_executable(bench2 ./simple/bench2.cpp)
-# add_executable(bench3 ./A216264/bench.cpp)
+# add_executable(bench3 ./A216264/bench1.cpp)
+add_executable(bench4 ./A216264/bench2.cpp)
 
 # Link against the required package
 target_link_libraries(your_executable ${YourPackage_LIBRARIES})
@@ -22,9 +23,12 @@ set(SOURCES
 ./simple/eertree2.h
 ./simple/bench1.cpp
 ./simple/bench2.cpp
-#./A216264/eertree.h
-#./A216264/bench.cpp
+# ./A216264/eertree1.h
+./A216264/eertree2.h
+# ./A216264/bench1.cpp
+./A216264/bench2.cpp
 )
 target_link_libraries(bench1 benchmark::benchmark)
 target_link_libraries(bench2 benchmark::benchmark)
 # target_link_libraries(bench3 benchmark::benchmark)
+target_link_libraries(bench4 benchmark::benchmark)
