--- a/package.yaml
+++ b/package.yaml
@@ -76,33 +76,44 @@ tests:
     - template-haskell
 
 benchmarks:
-  simple:
-    main:        Main.hs
-    source-dirs: bench/simple
-    ghc-options:
-    - -threaded
-    - -O2
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - criterion
-    - eertree
+  # simple:
+  #   main:        Main.hs
+  #   source-dirs: bench/hs/simple
+  #   ghc-options:
+  #   - -threaded
+  #   - -O2
+  #   - -rtsopts
+  #   - -with-rtsopts=-N
+  #   dependencies:
+  #   - criterion
+  #   - eertree
 
-  list:
-    main:        Main.hs
-    source-dirs: bench/list
-    ghc-options:
-    - -threaded
-    - -O2
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - criterion
-    - eertree
+  # list:
+  #   main:        Main.hs
+  #   source-dirs: bench/hs/list
+  #   ghc-options:
+  #   - -threaded
+  #   - -O2
+  #   - -rtsopts
+  #   - -with-rtsopts=-N
+  #   dependencies:
+  #   - criterion
+  #   - eertree
 
-  node:
-    main:        Main.hs
-    source-dirs: bench/node
+  # node:
+  #   main:        Main.hs
+  #   source-dirs: bench/hs/node
+  #   ghc-options:
+  #   - -threaded
+  #   - -O2
+  #   - -rtsopts
+  #   - -with-rtsopts=-N
+  #   dependencies:
+  #   - criterion
+  #   - eertree
+  rich:
+    main:         Main.hs
+    source-dirs: bench/hs/rich
     ghc-options:
     - -threaded
     - -O2
@@ -111,20 +122,3 @@ benchmarks:
     dependencies:
     - criterion
     - eertree
-
-  cpp:
-    main:        Main.hs
-    source-dirs: bench/cpp
-    ghc-options:
-    - -threaded
-    - -O2
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - bytestring
-    - criterion
-    - eertree
-    # - inline-c
-    - inline-c-cpp
-    - template-haskell
-    - utf8-string
