--- a/package.yaml
+++ b/package.yaml
@@ -36,7 +36,7 @@ dependencies:
 executables:
   a216264:
     main:         A216264.hs
-    source-dirs:  app
+    source-dirs:  app/hs/A216264
     ghc-options:
       - -O2
       - -threaded
@@ -45,8 +45,8 @@ executables:
     dependencies:
       - eertree
   msubstr:
-    main:        MSUBSTR.hs
-    source-dirs: app/hs/
+    main:        Msubstr.hs
+    source-dirs: app/hs/MSUBSTR
     ghc-options:
     - -threaded
     - -O2
@@ -94,37 +94,37 @@ benchmarks:
     dependencies:
     - criterion
     - eertree
-  # list:
-  #   main:        Main.hs
-  #   source-dirs: bench/hs/list
-  #   ghc-options:
-  #   - -threaded
-  #   - -O2
-  #   - -rtsopts
-  #   - -with-rtsopts=-N
-  #   dependencies:
-  #   - criterion
-  #   - eertree
+  list:
+    main:        Main.hs
+    source-dirs: bench/hs/list
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - eertree
 
-  # node:
-  #   main:        Main.hs
-  #   source-dirs: bench/hs/node
-  #   ghc-options:
-  #   - -threaded
-  #   - -O2
-  #   - -rtsopts
-  #   - -with-rtsopts=-N
-  #   dependencies:
-  #   - criterion
-  #   - eertree
-  # rich:
-  #   main:         Main.hs
-  #   source-dirs: bench/hs/rich
-  #   ghc-options:
-  #   - -threaded
-  #   - -O2
-  #   - -rtsopts
-  #   - -with-rtsopts=-N
-  #   dependencies:
-  #   - criterion
-  #   - eertree
+  node:
+    main:        Main.hs
+    source-dirs: bench/hs/node
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - eertree
+  rich:
+    main:         Main.hs
+    source-dirs: bench/hs/rich
+    ghc-options:
+    - -threaded
+    - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - eertree
