Update benchmarks, Add msubstr benchmarks
* Restructured benchmarks
* Benchmarks are updated to contain msubstr results
* Observation:  Current benchmarks are only fair for rich strings as that is independent of input
		Applications or simple eertree construction are dependent on input: so the way they're measured will need to be changed.

--- a/bench/cpp/CMakeLists.txt
+++ b/bench/cpp/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(bench1 ./simple/bench1.cpp)
 add_executable(bench2 ./simple/bench2.cpp)
 add_executable(bench3 ./A216264/bench1.cpp)
 add_executable(bench4 ./A216264/bench2.cpp)
+add_executable(bench5 ./Msubstr/bench.cpp)
 
 # Link against the required package
 target_link_libraries(your_executable ${YourPackage_LIBRARIES})
@@ -19,16 +20,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
 set(SOURCES
-./simple/eertree1.h 
-./simple/eertree2.h
+./eertree1.h 
+./eertree2.h
 ./simple/bench1.cpp 
 ./simple/bench2.cpp
-./A216264/eertree1.h
-./A216264/eertree2.h
 ./A216264/bench1.cpp
 ./A216264/bench2.cpp
+./Msubstr/bench.cpp
 )
 target_link_libraries(bench1 benchmark::benchmark)
 target_link_libraries(bench2 benchmark::benchmark)
 target_link_libraries(bench3 benchmark::benchmark)
 target_link_libraries(bench4 benchmark::benchmark)
+target_link_libraries(bench5 benchmark::benchmark)
