--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 - deepseq
 - mtl
 - parallel
+- text
 
 executables:
   a216264:
@@ -52,6 +53,8 @@ executables:
     ghc-options:
     - -threaded
     - -O2
+    - -rtsopts
+    - -with-rtsopts=-N
     dependencies:
     - eertree
   queries:
