--- a/app/cpp/CMakeLists.txt
+++ b/app/cpp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Add your source files
 add_executable(msubstr ./MSUBSTR.cpp)
 add_executable(queries ./queries.cpp)
+add_executable(rich ./rich.cpp)
 
 cmake_minimum_required(VERSION 3.5)
 project(eertree_app)
@@ -13,4 +14,5 @@ set(SOURCES
 ./eertree2.h
 ./MSUBSTR.cpp
 ./queries.cpp
+./rich.cpp
 )
