--- a/app/cpp/Makefile
+++ b/app/cpp/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 CXXFLAGS = -std=c++11
 
 # Specify the names of your executables
-EXECS = msubstr queries rich
+EXECS = msubstr msubstr-direct msubstr-semi-pers queries-direct queries-semi-pers rich-direct rich-semi-pers
 
 .PHONY: all clean build run
 
@@ -14,12 +14,20 @@ build:
 	fi
 	@cd build && cmake .. && make
 
-run_msubstr: build
-	./build/msubstr
-run_queries: build
-	./build/queries
-run_rich: build
-	./build/rich
+run-msubstr: build
+	./build/msubstr-classic
+run-msubstr-direct: build
+	./build/msubstr-direct
+run-msubstr-semi-pers: build
+	./build/msubstr-semi-pers
+run-queries-direct: build
+	./build/queries-direct
+run-queries-semi-pers: build
+	./build/queries-semi-pers
+run-rich-direct: build
+	./build/rich-direct
+run-rich-semi-pers: build
+	./build/rich-semi-pers
 clean:
 	@rm -rf build
 
