--- a/package.yaml
+++ b/package.yaml
@@ -37,9 +37,9 @@ dependencies:
 - text
 
 executables:
-  a216264:
-    main:         A216264.hs
-    source-dirs:  app/hs/A216264
+  rich:
+    main:         rich.hs
+    source-dirs:  app/hs/rich
     ghc-options:
       - -O2
       - -threaded
@@ -49,7 +49,7 @@ executables:
       - eertree
   msubstr:
     main:        Msubstr.hs
-    source-dirs: app/hs/MSUBSTR
+    source-dirs: app/hs/msubstr
     ghc-options:
     # - -threaded
     - -O2
@@ -57,7 +57,7 @@ executables:
     - eertree
   msubstr-par:
     main:        MsubstrPar.hs
-    source-dirs: app/hs/MSUBSTR-PAR
+    source-dirs: app/hs/msubstr-par
     ghc-options:
     - -threaded
     - -O2
@@ -67,7 +67,7 @@ executables:
     - eertree
   queries:
     main: Queries.hs
-    source-dirs: app/hs/QUERIES
+    source-dirs: app/hs/queries
     ghc-options:
     - -threaded
     - -O2
@@ -138,7 +138,7 @@ benchmarks:
     dependencies:
     - criterion
     - eertree
-  rich:
+  rich-bench:
     main:         Main.hs
     source-dirs: bench/hs/rich
     ghc-options:
