--- a/bench/cpp/CMakeLists.txt
+++ b/bench/cpp/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(bench-msubstr-direct ./msubstr/bench_msubstr.cpp)
 add_executable(bench-msubstr-semi-pers ./msubstr/bench_msubstr.cpp)
 add_executable(bench-queries-direct ./queries/bench_queries.cpp)
 add_executable(bench-queries-semi-pers ./queries/bench_queries.cpp)
+add_executable(bench-rich-simple ./rich/bench_rich.cpp)
 add_executable(bench-rich-direct ./rich/bench_rich.cpp)
 add_executable(bench-rich-semi-pers ./rich/bench_rich.cpp)
 
@@ -25,8 +26,14 @@ target_compile_definitions(bench-msubstr-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(bench-msubstr-semi-pers PRIVATE EERTREE_SEMI_PERS)
 target_compile_definitions(bench-queries-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(bench-queries-semi-pers PRIVATE EERTREE_SEMI_PERS)
+target_compile_definitions(bench-queries-direct PRIVATE BENCH_RUN)
+target_compile_definitions(bench-queries-semi-pers PRIVATE BENCH_RUN)
+target_compile_definitions(bench-rich-simple PRIVATE RICH_SIMPLE)
 target_compile_definitions(bench-rich-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(bench-rich-semi-pers PRIVATE EERTREE_SEMI_PERS)
+target_compile_definitions(bench-rich-simple PRIVATE BENCH_RUN)
+target_compile_definitions(bench-rich-direct PRIVATE BENCH_RUN)
+target_compile_definitions(bench-rich-semi-pers PRIVATE BENCH_RUN)
 
 find_package(benchmark REQUIRED)
 
@@ -40,6 +47,7 @@ target_link_libraries(bench-msubstr-direct benchmark::benchmark)
 target_link_libraries(bench-msubstr-semi-pers benchmark::benchmark)
 target_link_libraries(bench-queries-direct benchmark::benchmark)
 target_link_libraries(bench-queries-semi-pers benchmark::benchmark)
+target_link_libraries(bench-rich-simple benchmark::benchmark)
 target_link_libraries(bench-rich-direct benchmark::benchmark)
 target_link_libraries(bench-rich-semi-pers benchmark::benchmark)
 
@@ -47,6 +55,7 @@ set(SOURCES
 ./src/msubstr/msubstr.h 
 ./src/queries/queries.h
 ./src/rich/rich.h
+/.src/rich/rubinchik_rich.h
 ./lib/eertree_classic.h
 ./lib/eertree_direct.h
 ./lib/eertree_semi_pers.h
