--- a/app/cpp/CMakeLists.txt
+++ b/app/cpp/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(msubstr-direct ./src/msubstr/msubstr.cpp)
 add_executable(msubstr-semi-pers ./src/msubstr/msubstr.cpp)
 add_executable(queries-direct ./src/queries/queries.cpp)
 add_executable(queries-semi-pers ./src/queries/queries.cpp)
+add_executable(rich-simple ./src/rich/rich.cpp)
 add_executable(rich-direct ./src/rich/rich.cpp)
 add_executable(rich-semi-pers ./src/rich/rich.cpp)
 
@@ -16,6 +17,7 @@ target_compile_definitions(msubstr-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(msubstr-semi-pers PRIVATE EERTREE_SEMI_PERS)
 target_compile_definitions(queries-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(queries-semi-pers PRIVATE EERTREE_SEMI_PERS)
+target_compile_definitions(rich-simple PRIVATE SIMPLE_RICH)
 target_compile_definitions(rich-direct PRIVATE EERTREE_DIRECT)
 target_compile_definitions(rich-semi-pers PRIVATE EERTREE_SEMI_PERS)
 
@@ -29,4 +31,5 @@ set(SOURCES
 ./src/msubstr/msubstr.h
 ./src/queries/queries.h
 ./src/rich/rich.h
+./src/rich/rich_simple.h
 )
