--- a/bench/cpp/Makefile
+++ b/bench/cpp/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 CXXFLAGS = -std=c++11
 
 # todo: super long line, rewrite
-EXECS = bench-msubstr bench-msubstr-direct bench-msubstr-semi-pers bench-queries-direct bench-queries-semi-pers bench-rich-simple bench-rich-direct bench-rich-semi-pers bench-simple bench-simple-direct bench-simple-semi-pers
+EXECS = bench-msubstr bench-msubstr-direct bench-msubstr-semi-pers bench-queries-direct bench-queries-semi-pers bench-rich-simple bench-rich-direct bench-rich-semi-pers bench-simple bench-simple-direct bench-simple-semi-pers bench-simple-binary bench-simple-direct-binary bench-simple-semi-pers-binary
 
 .PHONY: all clean build run
 
@@ -15,6 +15,12 @@ build:
 	@cd build && cmake .. && make
 
 run: build
+	./build/bench-simple-binary --benchmark_format=csv
+	@echo
+	./build/bench-simple-direct-binary --benchmark_format=csv
+	@echo
+	./build/bench-simple-semi-pers-binary --benchmark_format=csv
+	@echo
 	./build/bench-simple --benchmark_format=csv
 	@echo
 	./build/bench-simple-direct --benchmark_format=csv
